# csar_py

./: .gitattributes  .gitignore  changelog.md  dev.md  justfile  meson.build  pyproject.toml  readme.md
.github/workflows/: test.yml  wheels.yml
scripts/countries/: README.md  countries.py
scripts/states/: README.md  states.py
src/csar/: __init__.py  convert.py  plot.py  solver.py
src/cython/: _cy.pyx
src/zig/: build.zig  build.zig.zon  c_api.zig
tests/: test_bindings.py
