[build-system]
# meson-python drives meson, which compiles the Cython extension and
# links it against the Zig static archive.
requires = ["meson-python>=0.16", "ziglang>=0.15.2", "cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "csar"
version = "0.1.0"
description = "Conic spherical aspect-ratio solver: tightest enclosing cone of a point set on the unit sphere."
readme = "readme.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AJ Friend", email = "ajfriend@gmail.com" }]
keywords = ["conic", "spherical", "aspect-ratio", "cone", "geometry", "geodesy", "geospatial", "optimization", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Zig",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24"]

# csar.plot_cone needs matplotlib; the core solver doesn't.
[project.optional-dependencies]
plot = ["matplotlib>=3"]

[project.urls]
Homepage = "https://github.com/ajfriend/csar"
Repository = "https://github.com/ajfriend/csar"
Issues = "https://github.com/ajfriend/csar/issues"
"Upstream Zig package" = "https://github.com/ajfriend/csar_zig"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "matplotlib>=3"]  # matplotlib: test plot_cone
# csar's build backend. Not a default group — `just reinstall` syncs it and
# passes `--no-build-isolation-package csar` so a rebuild reuses these from the
# venv (~4s) instead of re-staging a fresh isolated build env (~9s). CI and
# `uv build` don't sync it; they use normal build isolation.
build = ["meson-python>=0.16", "ninja", "cython>=3.0", "ziglang>=0.15.2"]
# scripts/states + scripts/countries — geopandas-loaded vector examples.
geo = ["matplotlib>=3", "geopandas>=1", "pyogrio"]

[tool.pytest.ini_options]
addopts = [
    "--cov=csar",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true

# Non-editable installs put csar/ under site-packages; alias it back
# to src/csar/ so the coverage report shows the source path.
[tool.coverage.paths]
csar = ["src/csar", "*/site-packages/csar"]


[tool.cibuildwheel]
# uv installs the build deps (meson-python, ziglang, cython, numpy)
# faster than pip.
build-frontend = "build[uv]"
test-requires = ["pytest", "numpy"]
# Override pyproject.toml's addopts (which assume pytest-cov) — the
# coverage report is for local dev, not the per-wheel test envs.
test-command = "pytest {project}/tests -o addopts="
